--- a/runing_time_comparison_on_docker.Rmd
+++ b/runing_time_comparison_on_docker.Rmd
@@ -14,6 +14,13 @@ knit: (function(input_file, encoding) {
 ---
 
 
+
+```{r, message=F, warning=F,results=F}
+library(renv)
+renv::activate()
+renv::restore()
+```
+
 ```{r message=F, warning=F}
 library(ggplot2)
 library(scGate)
