--- a/scGate.benchmark.Rmd
+++ b/scGate.benchmark.Rmd
@@ -19,8 +19,9 @@ knit: (function(input_file, encoding) {
 library(renv)
 renv::activate()
 renv::restore()
-remotes::install_github("carmonalab/UCell")
-remotes::install_github("carmonalab/scGate", ref='v1.0.0') #stable release
+#remotes::install_github("carmonalab/UCell", ref="v1.1")
+#remotes::install_github("mojaveazure/seurat-disk",ref="163f1aade5bac38ed1e9e9c912283a7e74781610")
+#remotes::install_github("carmonalab/scGate", ref='v1.0.0') #stable release
 
 library(ggplot2)
 library(dplyr)
