--- a/runing_time_comparison_on_docker.Rmd
+++ b/runing_time_comparison_on_docker.Rmd
@@ -29,25 +29,21 @@ library(dplyr)
 library(BiocParallel)
 library(patchwork)
 library(parallel)
-#install.packages("Seurat")
-#library(Seurat)
+library(Seurat)
 ```
 
 
 
 # Get some testing datasets
 ```{r}
-#BiocManager::install(c("cli","crayon","hdf5r","Matrix","R6","rlang","SeuratObject","stringi","withr"))
-#remotes::install_github("mojaveazure/seurat-disk")
-#testing.datasets <- scGate:::get_testing_data(version = 'hsa.latest')
-ddir <- "~/scGate.benchmark/aux/"
+ddir <- "./aux"
 dir.create(ddir, showWarnings = FALSE)
 options(timeout=1000)
 if(TRUE){
   #subset 50K Hao et.al. 2021
-  rds.file <- "~/aux/Hao_subset50K_sct.rds"
+  rds.file <- paste0(ddir,"/Hao_subset50K_sct.rds")
   if (!file.exists(rds.file)) {
-    dataUrl.rds <- "https://figshare.com/ndownloader/files/31347367?private_link=31c57715c30ce9f57552"
+    dataUrl <- "https://figshare.com/ndownloader/files/31347367?private_link=31c57715c30ce9f57552"
     download.file(dataUrl, rds.file)
   }
   pbmc.azimuth.subset <- readRDS(rds.file)
@@ -62,11 +58,11 @@ if(TRUE){
   pbmc.azimuth.full <- SeuratDisk::LoadH5Seurat(dset.h5)
   pbmc.azimuth.full <- DietSeurat(pbmc.azimuth.full, counts = T, scale.data = FALSE, assays = 'SCT',dimreducs = NULL)
   pbmc.azimuth.subset <- subset(pbmc.azimuth.full, cells=sample(Cells(pbmc.azimuth.full),50000))
-  saveRDS(pbmc.azimuth.subset,file = "~/aux/Hao_subset50K_sct.rds") # This file is which is now in figshare
+  saveRDS(pbmc.azimuth.subset,file = paste0(ddir,"/Hao_subset50K_sct.rds"))
 }
 
 #Reduce object size
-pbmc.azimuth.subset@assays$RNA <- pbmc.azimuth.full@assays$SCT
+pbmc.azimuth.subset@assays$RNA <- pbmc.azimuth.subset@assays$SCT
 DefaultAssay(pbmc.azimuth.subset) <- "RNA"
 class(pbmc.azimuth.subset@assays$RNA) <- 'Assay'
 pbmc.azimuth.subset@assays$SCT <- NULL
@@ -76,7 +72,7 @@ gc(reset=T)
 
 ## Load scGate models
 ```{r}
-models.DB <- scGate::get_scGateDB()
+models.DB <- scGate::get_scGateDB(version="v0.4")
 model <- models.DB$human$generic$CD8T  # model with 4 levels 
 model$levels%>%unique()%>%length()
 ```
@@ -141,7 +137,7 @@ for(downsample in ncells){
 
 ```{r}
 results <- list(timing = timing)
-saveRDS(results,"~/aux/runtime_SingleR_scGate_4core.rds")
+saveRDS(results,paste0(ddir,"/runtime_SingleR_scGate_4core.rds"))
 
 
 ```
@@ -169,8 +165,8 @@ plt.time <- ggplot(res.time,aes(x=Ncell,y = time,
 plt <- plt.time 
 save = FALSE
 if(save){
-  ggsave(filename = "~/aux/runtime_benchmark_onDocker_4c.png",plot = plt, width = 7,height = 7)
-  ggsave(filename = "~/aux/runtime_benchmark_onDocker_4c.pdf",plot = plt, width = 7,height = 7)
+  ggsave(filename = paste0(ddir,"/runtime_benchmark_onDocker_4c.png"),plot = plt, width = 7,height = 7)
+  ggsave(filename = paste0(ddir,"/runtime_benchmark_onDocker_4c.pdf"),plot = plt, width = 7,height = 7)
 }
 ```
 
